--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.14.1",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
