--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.3",
+    "@next/third-parties": "^15.2.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -29,7 +30,7 @@
     "glob": "^11.0.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.2.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
