--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
     "@types/glob": "^8.1.0",
     "@types/mdx": "^2.0.13",
@@ -38,6 +39,7 @@
     "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-pretty-code": "^0.14.1",
+    "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
