--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
+    "rehype-code-titles": "^1.2.0",
     "rehype-pretty-code": "^0.14.1",
     "shiki": "^3.2.1",
     "tailwind-merge": "^3.0.2",
