--- a/package.json
+++ b/package.json
@@ -58,5 +58,12 @@
     "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.0.14",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@vercel/speed-insights",
+      "rehype-code-titles",
+      "sharp"
+    ]
   }
 }
